RESOLVED FIXED121248
AX: AXPress does not work in SVG
https://bugs.webkit.org/show_bug.cgi?id=121248
Summary AX: AXPress does not work in SVG
chris fleizach
Reported 2013-09-12 12:55:38 PDT
If an SVG element has an on click handler, VoiceOver cannot activate that <rdar://problem/9044151>
Attachments
patch (4.20 KB, patch)
2013-09-12 12:58 PDT, chris fleizach
mario: review+
original test case (1.18 KB, text/html)
2014-06-23 20:31 PDT, James Craig
no flags
chris fleizach
Comment 1 2013-09-12 12:58:21 PDT
Mario Sanchez Prada
Comment 2 2013-09-13 02:17:04 PDT
Comment on attachment 211460 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=211460&action=review lgtm > LayoutTests/accessibility/svg-element-press.html:33 > + Extra blank line here.
chris fleizach
Comment 3 2013-09-13 10:31:31 PDT
Samuel White
Comment 4 2013-09-16 13:51:51 PDT
*** Bug 121258 has been marked as a duplicate of this bug. ***
James Craig
Comment 5 2014-06-23 20:31:21 PDT
Created attachment 233674 [details] original test case
Note You need to log in before you can comment on or make changes to this bug.