AX: AXPress does not work in SVG https://bugs.webkit.org/show_bug.cgi?id=121248

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Implement accessKeyAction() on SVGElements, which is what accessibility code
uses in order to activate Elements.

Test: accessibility/svg-element-press.html

* svg/SVGElement.cpp:
(WebCore::SVGElement::accessKeyAction):
* svg/SVGElement.h:

LayoutTests:

* accessibility/svg-element-press-expected.txt: Added.
* accessibility/svg-element-press.html: Added.



Canonical link: https://commits.webkit.org/139265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155708 268f45cc-cd09-0410-ab3c-d52691b4dbfc